Fixing flexbox issues with large comments (#141)
* Fixing flexbox issues with large comments

- Moved chapter selection to below the board, on the right side.
- Made a scrollbar appear that covers the whole right area.
- Removed the old scrollbars for mobile.
- Made the comment section never extend higher than the board itself.
- Changed the options from 3 columns to 2 columns.
- Added close button (x) to the info boxes.
- Made sure the Reset line option ends up in the right column.
- I moved some options from app.scss to study.css which were only local to studies.

* Changing the design a little after review

* \t -> "    "

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -64,8 +64,21 @@ body {
 }
 
 .infoBox {
+    position: relative;
     margin: 10px 0px;
     padding:12px;
+}
+
+.close_button {
+    display: inline-block;
+    position: absolute;
+    top: -5px;
+    right: 1px;
+    cursor: pointer;
+    /* Make it non-selectable */
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 .hidden {
@@ -103,17 +116,17 @@ input:invalid {
 
 blockquote:before {
     font-family: "listudy";
-	font-size: 32px;
-	color: var(--font-color);
-	content: "&";
-	display: block;
-	position: absolute;
-	top: -15px;
-	left: 0;
-	transform: scaleX(-1);
+    font-size: 32px;
+    color: var(--font-color);
+    content: "&";
+    display: block;
+    position: absolute;
+    top: -15px;
+    left: 0;
+    transform: scaleX(-1);
 }
 blockquote {
-	font-size: 1.1em;
+    font-size: 1.1em;
     margin: 0 0 27px;
     padding-left: 48px;
     position: relative;
@@ -137,6 +150,7 @@ body {
 .with_sidebar {
     display: flex;
 }
+
 @media only screen and (max-width: 600px) {
     .with_sidebar {
         display: block;
@@ -145,17 +159,6 @@ body {
         margin-left: 0px !important;
         
     }
-    .study_options {
-        position: relative !important;
-    }
-    .chapter_selection {
-        max-width: 100% !important;
-    }
-}
-.study_options {
-    position: absolute;
-    bottom: 0;
-    left: 0;
 }
 
 .sidebar_main {
